Fix club index search bar spacing

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -456,6 +456,8 @@ footer {
 
 .club-query-create {
   text-align: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .club {
